# openGL_study

./: .gitignore
SwiftUI_Triangle/: Podfile
SwiftUI_Triangle/SwiftUI_Triangle/: ContentView.swift  SwiftUI_TriangleApp.swift
SwiftUI_Triangle/SwiftUI_Triangle.xcodeproj/: project.pbxproj
SwiftUI_Triangle/SwiftUI_Triangle.xcworkspace/: contents.xcworkspacedata
Swift_CPP_Triangle/Swift_CPP_Triangle/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
Swift_CPP_Triangle/Swift_CPP_Triangle.xcodeproj/: project.pbxproj
Swift_Graph_Operation/: Podfile
Swift_Graph_Operation/Swift_Graph_Operation/: AppDelegate.swift  Element.swift  SceneDelegate.swift  SelectionBGView.swift  ViewController.swift
Swift_Graph_Operation/Swift_Graph_Operation.xcodeproj/: project.pbxproj
Swift_Graph_Operation/Swift_Graph_Operation.xcworkspace/: contents.xcworkspacedata
Swift_Paint/: Podfile
Swift_Paint/Swift_Paint/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
Swift_Paint/Swift_Paint.xcodeproj/: project.pbxproj
Swift_Paint/Swift_Paint.xcworkspace/: contents.xcworkspacedata
Swift_Text/: Podfile
Swift_Text/Swift_Text/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
Swift_Text/Swift_Text.xcodeproj/: project.pbxproj
Swift_Text/Swift_Text/Text/: Text.cpp  (+4 more)
Swift_Triangle/Swift_Triangle.xcodeproj/: project.pbxproj
opengltest/: CMakeLists.txt  main.cpp
opengltest/lib/glad/include/glad/: glad.h
opengltest/lib/glad/src/: glad.c
opengltest/shader/: multiple_lights.fs
opengltest/tool/: camera.h  filesystem.h  shader.h  stb_image.cpp
(+46 files in other folders)
